gccida/c1/equiv_constant
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/equiv_constant/src/cse.c:4830:54: error: expected ')'
if ( rtint != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/equiv_constant/src/cse.c:4830:31: note: to match this '('
if ( rtint != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/equiv_constant/src/cse.c:4830:77: error: expected expression
if ( rtint != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/equiv_constant/src/cse.c:4831:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( rtint); 
 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/equiv_constant/src/cse.c:4839:34: error: use of undeclared identifier 'machine_mode'
exp = gen_lowpart_if_possible( ( machine_mode)*( ( unsigned __int8 *)exp + 2), const_rtx); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/equiv_constant/src/cse.c:4863:25: error: use of undeclared identifier 'machine_mode'
v11 = safe_hash( exp, ( machine_mode)BYTE2( v9)); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/equiv_constant/src/cse.c:4864:34: error: use of undeclared identifier 'machine_mode'
v12 = lookup( exp, v11 & 0x1F, ( machine_mode)*( ( unsigned __int8 *)exp + 2)); 
                                 ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/equiv_constant/src/obj/cse.o] Error 1
